minikube_config/db.yaml
apiVersion: v1

kind: Service
metadata:
  name: db
spec:
  selector:
    app: db
  ports:
    - port: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: projetdocker_m1_crv-db:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5432
